@@ -6,6 +6,11 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- change encoding in .rc file.
 	- update three files left over from the translation update in TILP II 1.14.
 	- GUI improvements by Jon Sturm.
+	- fixes for the TI-83+ series: no OS version checking is necessary for the
+	  del_var and clock operations, because they are already covered by the OPS_*
+	  model checks (reported by Jon Sturm)
+	- remove unused TI-8x OS version checking code.
+	- require AMS >= 2.09 for folder creation on the TI-68k series.
 
 - 08/04/2010, version 1.14 (1.3.1, 1.1.5, 1.1.3, 1.1.1): debrouxl
 	- minor documentation updates.
